--- a/assignment.html
+++ b/assignment.html
@@ -318,7 +318,7 @@
 <b>PLAGIARISM</b>
     Plagiarism is treated seriously. If we suspect any word is copied, all students involved are likely to receive zero
     for the entire assignment. Plagiarism has led to students being expelled from the University.
-    Please click <a href="https://www.uow.edu.au/student/support-services/academic-skills/online-resources/referencing-and-citing/plagiarism/">here</a> to read more about Plagiarism.
+    Please click <a href="https://www.uow.edu.au/student/support-services/academic-skills/online-resources/referencing-and-citing/plagiarism/" target="_blank">here</a> to read more about Plagiarism.
             </pre>
         <!-- Academic Consideration Section -->
             <pre class="part3">
@@ -327,7 +327,7 @@
     to class or an exam. If you find yourself in a situation like this, you may be eligible for Academmic Consideration.
     Academic Consideration is designed to help students when they are sick injured, or where a serious, unplanned
     situation has occured that has affected their ability to study.
-    Please click <a href="https://www.uow.edu.au/student/admin/academic-consideration/">here</a> to read more about Academic Consideration.
+    Please click <a href="https://www.uow.edu.au/student/admin/academic-consideration/" target="_blank">here</a> to read more about Academic Consideration.
             </pre>
         <!-- Student Support Section -->
             <pre class="part3">
@@ -335,7 +335,7 @@
     If you have an issue or a problem that is affecting your study, then the Student Support Advisers may be able to
     help. There are Student Support Advisers available to assist students who are studying at all UOW Campuses and 
     in all UOW Faculties.
-    Please click <a href="https://www.uow.edu.au/student/support-services/">here</a> to read more about Student Support Advisers.
+    Please click <a href="https://www.uow.edu.au/student/support-services/" target="_blank">here</a> to read more about Student Support Advisers.
 
     Student Support Adviser contact details for Faculty of Engineering and Information Sciences:
             </pre>
@@ -366,7 +366,7 @@
        Disability Services provide advice and support for students with a disability or health condition. Our aim  is to
        ensure students with a disability realise their full academic potential. We also provide support for those who are
        the primary carers for those with a medical condition or disability.
-       Please click <a href="https://www.uow.edu.au/business-law/about/equity-diversity-inclusion/disability-resources/">here</a> to read more Disability Services.
+       Please click <a href="https://www.uow.edu.au/business-law/about/equity-diversity-inclusion/disability-resources/" target="_blank">here</a> to read more Disability Services.
          </pre>
          <hr>
         </section>
