--- a/assignment.html
+++ b/assignment.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>A1-G09T06-UOWID1,UOWID2</title>
+        <title>A1-G09T06-1037110,1036488</title>
         <style>
             #part1_heading {
                 background-color: #deeaf6;
@@ -31,7 +31,7 @@
             }
 
             #part3_table {
-                margin-left: 25px;
+                margin-left: 42px;
                 margin-top: -20px;
             }
 
@@ -181,20 +181,20 @@
             <table border="1" id="part1_table">
                 <tr>
                     <th colspan="3" id="part1_heading">CSIT128: Assignment 1</th>
-                    <th id="part1_heading">Group GXT06</th>
+                    <th id="part1_heading">Group G6T09</th>
                 </tr>
                 <tr>
                     <td rowspan="4" style="width: 150px ;word-wrap: break-word; padding-left: 5px;">Student Number / Name / Email</td>
                 </tr>
                 <tr>
-                    <td id="part1_td" style="padding-right: 20px;">UOW ID 1</td>
-                    <td id="part1_td" style="padding-right: 50px;">Name 1</td>
-                    <td id="part1_td" style="padding-right: 50px;">Name1@something.com</td>
+                    <td id="part1_td" style="padding-right: 20px;">1037110</td>
+                    <td id="part1_td" style="padding-right: 30px;">Shannon Lee Si Ying</td>
+                    <td id="part1_td" style="padding-right: 50px;">shannonlsy@gmail.com</td>
                 </tr>
                 <tr>
-                    <td id="part1_td">UOW ID 2</td>
-                    <td id="part1_td">Name 2</td>
-                    <td id="part1_td">Name2@something.com</td>
+                    <td id="part1_td">1036488</td>
+                    <td id="part1_td">Lim En Le</td>
+                    <td id="part1_td">limenle@gmail.com</td>
                 </tr>
                 <tr>
                     <td id="part1_td">UOW ID 3</td>
@@ -316,28 +316,28 @@
         <section>
             <pre class="part3">
 <b>PLAGIARISM</b>
-    Plagiarism is treated seriously. If we suspect any word is copied, all students involved are likely to receive zero
-    for the entire assignment. Plagiarism has led to students being expelled from the University.
-    Please click <a href="https://www.uow.edu.au/student/support-services/academic-skills/online-resources/referencing-and-citing/plagiarism/" target="_blank">here</a> to read more about Plagiarism.
+       Plagiarism is treated seriously. If we suspect any word is copied, all students involved are likely to receive zero
+       for the entire assignment. Plagiarism has led to students being expelled from the University.
+       Please click <a href="https://www.uow.edu.au/student/support-services/academic-skills/online-resources/referencing-and-citing/plagiarism/" target="_blank">here</a> to read more about Plagiarism.
             </pre>
         <!-- Academic Consideration Section -->
             <pre class="part3">
 <b>ACADEMIC CONSIDERATION</b>
-    We know that life isn't perfect and there may be a time when you can't hand in an assignment on time, or make it
-    to class or an exam. If you find yourself in a situation like this, you may be eligible for Academmic Consideration.
-    Academic Consideration is designed to help students when they are sick injured, or where a serious, unplanned
-    situation has occured that has affected their ability to study.
-    Please click <a href="https://www.uow.edu.au/student/admin/academic-consideration/" target="_blank">here</a> to read more about Academic Consideration.
+       We know that life isn't perfect and there may be a time when you can't hand in an assignment on time, or make it
+       to class or an exam. If you find yourself in a situation like this, you may be eligible for Academmic Consideration.
+       Academic Consideration is designed to help students when they are sick injured, or where a serious, unplanned
+       situation has occured that has affected their ability to study.
+       Please click <a href="https://www.uow.edu.au/student/admin/academic-consideration/" target="_blank">here</a> to read more about Academic Consideration.
             </pre>
         <!-- Student Support Section -->
             <pre class="part3">
 <b>STUDENT SUPPORT ADVISERS</b>
-    If you have an issue or a problem that is affecting your study, then the Student Support Advisers may be able to
-    help. There are Student Support Advisers available to assist students who are studying at all UOW Campuses and 
-    in all UOW Faculties.
-    Please click <a href="https://www.uow.edu.au/student/support-services/" target="_blank">here</a> to read more about Student Support Advisers.
+       If you have an issue or a problem that is affecting your study, then the Student Support Advisers may be able to
+       help. There are Student Support Advisers available to assist students who are studying at all UOW Campuses and 
+       in all UOW Faculties.
+       Please click <a href="https://www.uow.edu.au/student/support-services/" target="_blank">here</a> to read more about Student Support Advisers.
 
-    Student Support Adviser contact details for Faculty of Engineering and Information Sciences:
+       Student Support Adviser contact details for Faculty of Engineering and Information Sciences:
             </pre>
             <table border="1" id="part3_table">
                 <tr>
